<resources>
    <string name="app_name">Accountability</string>

    <string name="front_page_current_activity_title">Current activity:</string>
    <string name="front_page_complete_activity_button">Complete Activity</string>
    <string name="front_page_extend_activity_button">Extend Activity</string>

    <string name="activity_card_dates_format">%1$s - %2$s</string>

    <string name="activity_options_edit_button">Edit</string>
    <string name="activity_options_complete_button">Complete</string>
    <string name="activity_options_create_next_button">Create Follow On Activity</string>
    <string name="activity_options_delete_button">Delete</string>
    <string name="activity_options_confirm_delete_message">Are you sure you want to delete activity %1s?</string>
    <string name="activity_options_confirm_delete_positive_response">Delete</string>
    <string name="activity_options_confirm_delete_negative_response">Cancel</string>

    <string name="edit_activity_follow_on_note_text">Follow on Activity for %1s</string>

    <string name="edit_activity_name_title">Activity name</string>
    <string name="edit_activity_name_prompt">Take over the world</string>
    <string name="edit_activity_group_title">Group</string>
    <string name="edit_activity_new_group_button">New</string>
    <string name="edit_activity_start_title">From</string>
    <string name="edit_activity_end_title">To</string>
    <string name="edit_activity_duration_title">Duration</string>
    <string name="edit_activity_duration_hours">Hours</string>
    <string name="edit_activity_duration_minutes">Minutes</string>
    <string name="edit_activity_notes_title">Notes</string>
    <string name="edit_activity_notes_prompt">It\'s the same thing we do every day</string>
    <string name="edit_activity_save_button">Save Activity</string>

    <string name="edit_activity_group_name_title">Activity Group name</string>
    <string name="edit_activity_group_name_prompt">Evil Schemes</string>
    <string name="edit_activity_group_save_button">Save Activity Group</string>

    <string name="toast_activity_end_reminder_set">Reminder set for %1s</string>

</resources>